--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ input {
   font-weight: 700;
 }
 
-.form_primary-btn:hover {
+.form_primary-btn:active {
   background: linear-gradient(90deg, #FF6A3A 0%, #FF527B 100%);        
   box-shadow: 0 16px 32px 0 rgba(255, 97, 85, 0.50);
   border-color: transparent;
@@ -231,7 +231,7 @@ input {
 /* success message */
 
 dialog {
-  position: relative;
+  position: absolute;
   align-items: center;
   min-width: 375px;
   margin: 0 auto;
