--- a/style.css
+++ b/style.css
@@ -338,7 +338,8 @@ dialog::backdrop {
     grid-template-columns: none;
     grid-column: 2;
     grid-row: 1;
-    padding-block: 5.5rem;
+    padding-block: 5.6rem;
+    align-items:normal;
  
   }
 
