--- a/style.css
+++ b/style.css
@@ -143,8 +143,7 @@ ul li{
   display: flex;
   align-items: flex-start; 
   gap: 0.75rem;
-  line-height: 1.5;
-      padding-top: 10px;
+  padding-top: 10px;
 }
 
 .content-list__icon {
@@ -295,6 +294,9 @@ dialog::backdrop {
   font-size: 3.5rem;
   }
 
+  .content__blurb {
+    line-height: 1.5;
+  }
 
   /* success message tablet/desktop */
   dialog {
@@ -338,7 +340,8 @@ dialog::backdrop {
     grid-template-columns: none;
     grid-column: 2;
     grid-row: 1;
-    padding-block: 5.6rem;
+    row-gap:unset;
+    padding-block: 5.6rem 4rem;
     align-items:normal;
  
   }
@@ -347,4 +350,7 @@ dialog::backdrop {
   margin-block-start: 0;
  }
   
+ li:first-child {
+  padding: 0px
+ }
 }
